Adjusted home-page button to fixed position, should fix unwanted movement when a mobile user scrolls down the screen. Adjusted placement of footer by increasing bottom-margin. Should increase visibility of footer on mobile.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -166,40 +166,40 @@ body {
 
 .Relevant-skillset {
     /* Add styles for Relevant-skillset container if needed */
-  }
-  
-  .skillset-content {
+}
+
+.skillset-content {
     display: flex;
     align-items: left;
     justify-content: center;
-  }
-  
-  .gear-logo {
+}
+
+.gear-logo {
     width: 50px;
     height: 46px;
     margin-right: 30px;
     margin-bottom: 10px;
     margin-top: 15px;
-  }
-  
-  .text-container {
+}
+
+.text-container {
     text-align: center;
     max-width: 371px;
-  }
-  
-  .skillset-title {
+}
+
+.skillset-title {
     font-size: 18px;
     margin: 0;
-  }
-  
-  .skillset-description {
+}
+
+.skillset-description {
     font-size: 16px;
     margin: 0;
-  }
+}
 
-  
 
-  /*
+
+/*
     END THE TEXT UPDATING SECTION
   */
 
@@ -348,6 +348,13 @@ body {
     /* Push the footer to the bottom of the container */
     z-index: 2;
     justify-content: center;
+
+    /* Media query for screens with a maximum width of 599px (adjust as needed) */
+    @media only screen and (max-width: 599px) {
+
+        margin-bottom: 7%;
+    }
+
 }
 
 .footer {
@@ -427,6 +434,7 @@ body {
     border-radius: 12px;
     color: gold;
     background-color: #1065c0;
+    position: fixed;
     margin-top: 100px;
     padding: 20px;
     font-size: 20px;
